// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`02-SpineStructures 1 · Standalone clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/Standalone.ts:49.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:78.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.standalone",
}
`;

exports[`02-SpineStructures 2 · BaseService clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:100.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.baseService",
}
`;

exports[`02-SpineStructures 3 · ExtendedService clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/ExtendedService.ts:33.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:122.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.extendedService",
}
`;

exports[`02-SpineStructures 4 · MappingOrchestrator clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/MappingOrchestrator.ts:37.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/Standalone.ts:49.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:144.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.mappingOrchestrator",
}
`;

exports[`02-SpineStructures 5 · StructDelegateConsumer clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/StructDelegateConsumer.ts:32.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:166.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/structs/SchemaStruct.ts:32.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.structDelegateConsumer",
}
`;

exports[`02-SpineStructures 6 · MappingWithExtends clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/MappingWithExtends.ts:29.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/Standalone.ts:49.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:188.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.mappingWithExtends",
}
`;

exports[`02-SpineStructures 7 · CompositeService clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/CompositeService.ts:40.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/Standalone.ts:49.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:210.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/structs/SchemaStruct.ts:32.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/structs/ValidationStruct.ts:29.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.compositeService",
}
`;

exports[`02-SpineStructures 8 · LifecycleService clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/LifecycleService.ts:44.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:232.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.lifecycleService",
}
`;

exports[`02-SpineStructures 9 · SchemaStruct clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:254.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/structs/SchemaStruct.ts:32.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.schemaStruct",
}
`;

exports[`02-SpineStructures 10 · ValidationStruct clears cache, encapsulates, and verifies generated CST files 1`] = `
{
  "files": [
    "@stream44.studio/encapsulate/structs/Capsule.ts:18.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/caps/BaseService.ts:38.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/main.test.ts:276.csts.json",
    "engines/Capsule-Ladybug-v0/tests/02-SpineStructures/structs/ValidationStruct.ts:29.csts.json",
  ],
  "rootCapsuleName": "@stream44.studio/FramespaceGenesis/engines/Capsule-Ladybug-v0/tests/02-SpineStructures/run.validationStruct",
}
`;
